--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <div class="stars2"></div>
             <div class="shooting-stars"></div>
           </div>
+        <div class="arrow">
+            <img src="./arrow.png">
+        </div>
       </div>
        <div id="navbar">
            <a href="#block2">Mission</a>
@@ -60,9 +63,8 @@
             <div id="responsiveBlock">
                 <h2 style="text-align: left;">Contact us</h2>
                 <p>Find us on social media!</b</p>
-                <h2><a href="mailto:frc@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
-                <h2><a href="mailto:frc@dulwich-beijing.cn;"><i class="fab fa-weixin"></i></a></h2>
-                <h2><a href="mailto:frc@dulwich-beijing.cn;"><i class="fab fa-instagram"></i></a></h2>
+                <h2><a href="mailto:jingjing.chen@dulwich-shanghai.cn;"><i class="fas fa-envelope"></i></a></h2>
+                <h2><a href="http://www.instagram.com/helionrobotics"><i class="fab fa-instagram"></i></a></h2>
             </div>
       </div>
    </body>
