small touches to the paragraphs done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id="block1">
             <div id="responsiveBlock">
                 <h1 style="color: var(--white);">We are <span id="superEmph">Helion.</span></h1>
-                <p style="color: var(--whiteish);">Helion is a FIRST Robotics team founded in 2018, and is entirely composed of high school students. We are located at Dulwich College Beijing, and our purpose is to successfully construct and program a competition robot that will compete in a FIRST Robotics regional. Our belief is that not only will we develop as individuals in the different fields of robotics, but we will also grow as a team. We are certain that Helion will provide an incredible experience for young students, and will teach them the perseverance and dedication needed to progress and suceed on the path of their choosing, taking the spirit of Helion Robotics with them as the go forwards into their lives.</p>
+                <p style="color: var(--whiteish);">Helion is a FIRST Robotics team founded in 2018, and is entirely composed of high school and middle school students. We are located at Dulwich College Beijing, and our purpose is to successfully construct and program a competition robot that will compete in a FIRST Robotics regional. Our belief is that not only will we develop as individuals in the different fields of robotics, but we will also grow as a team. We are certain that Helion will provide an incredible experience for young students, and will teach them the perseverance and dedication needed to progress and suceed on the path of their choosing, taking the spirit of Helion Robotics with them as they go forward into their lives.</p>
             </div>
       </div>
       <div id="block2">
