Tiny heading edit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <div id="navbar">
            <a href="#block2">Mission</a>
            <a href="#block3">FAQ</a>
-           <a href="#block4">Find out more</a>
+           <a href="#block4">Contact us</a>
        </div>
       <div id="block1">
             <div id="responsiveBlock">
