Added shadows and response to hover

--- a/timeline.html
+++ b/timeline.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="timeline.css"
+  <link rel="stylesheet" href="timeline.css"/>
 </head>
 
 <body>
 
   <div class="timeline">
+
+    <div class="slider">
+
+    </div>
 
     <div class="container" id="red2">
       <div class="content">
@@ -44,6 +48,30 @@
         <h4>5th February, 2018</h4>
         <h1>The competition begins...</h1>
         <p>After weeks and weeks of hard work and labour, the Helion Robot is ready. Now, chosen members of the team are taking it to Silicon Valley, where they will compete for a chance to win first prize. Good Luck!</p>
+      </div>
+    </div>
+
+    <div class="container" id="red2">
+      <div class="content">
+        <h4>1st February, 2018</h4>
+        <h1>Founding of the FRC team</h1>
+        <p>The FRC team in Dulwich has been created! This is the first team for this competition ever.</p>
+      </div>
+    </div>
+
+    <div class="container" id="red1">
+      <div class="content">
+        <h4>3rd February 2018</h4>
+        <h1>Website creation</h1>
+        <p>The FRC programming team creates the official FRC website. It isn't perfect, but will build up with time to make a work of art</p>
+      </div>
+    </div>
+
+    <div class="container" id="orange">
+      <div class="content">
+        <h4>2nd February, 2018</h4>
+        <h1>The FRC team meets for the first time</h1>
+        <p>The founding members of the FRC team meet together for the first time to discuss their team name, the members required, and how to get funding</p>
       </div>
     </div>
 
