added shadow and hover expand effect

--- a/timeline.html
+++ b/timeline.html
@@ -8,7 +8,8 @@
   <div class="timeline">
 
     <div class="slider">
-
+      <button class="circle" id="first"></button>
+      <img src="stars.jpg" id="star"></img>
     </div>
 
     <div class="container" id="red2">
