Update contact links

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div id="responsiveBlock">
                 <h2 style="text-align: left;">Contact us</h2>
                 <p>Find us on social media!</b</p>
-                <h2><a href="mailto:jingjing.chen@dulwich-shanghai.cn;"><i class="fas fa-envelope"></i></a></h2>
-                <h2><a href="http://www.instagram.com/helionrobotics"><i class="fab fa-instagram"></i></a></h2>
+                <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
+                <h2><a href="http://www.instagram.com/helion_robotics"><i class="fab fa-instagram"></i></a></h2>
                 <h2><a href="Helion Newsletter 16.11.2018.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
             </div>
       </div>
