Improved timeline effects

--- a/timeline.html
+++ b/timeline.html
@@ -8,8 +8,14 @@
   <div class="timeline">
 
     <div class="slider">
-      <button class="circle" id="first"></button>
       <img src="stars.jpg" id="star"></img>
+      <button class="circle" id="first"></button>
+      <button class="circle" id="second"></button>
+      <button class="circle" id="third"></button>
+      <button class="circle" id="fourth"></button>
+      <button class="circle" id="fifth"></button>
+      <button class="circle" id="sixth"></button>
+      <div id="bar"></div>
     </div>
 
     <div class="container" id="red2">
