Added comment (Max's first commit!)

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </div>
       </div>
       <div id="block4">
+            <!-- Our contact section -->
             <div id="responsiveBlock">
                 <h2 style="text-align: left;">Contact us</h2>
                 <p>Find us on social media!</b</p>
