--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
    <head>
       <meta charset="UTF-8">
       <title>Helion FRC</title>
-      <link rel="stylesheet" href="stars.css">
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="./css/stars.css">
+      <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
    </head>
    <body>
             <div class="focus">
-               <img src="highquality.png">
+               <img src="./img/highquality.png">
                 <!--<h2>Dulwich College Beijing's All-Star First Robotics Challenge Team</h2>-->
             </div>
       <div class="container">
@@ -20,7 +20,7 @@
             <div class="shooting-stars"></div>
           </div>
         <div class="arrow">
-            <img src="./arrow.png">
+            <img src="./img/arrow.png">
         </div>
       </div>
        <div id="navbar">
@@ -65,7 +65,7 @@
                 <p>Find us on social media!</b</p>
                 <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
                 <h2><a href="http://www.instagram.com/helion_robotics"><i class="fab fa-instagram"></i></a></h2>
-                <h2><a href="Helion Newsletter 16.11.2018.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
+                <h2><a href="./newsletter/Helion Newsletter 16.11.2018.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
             </div>
       </div>
    </body>
