Formatting and Animation
Added various formatting in source code and changed block ids to their respective goals.

Also added smooth slide for navbar

--- a/index.html
+++ b/index.html
@@ -1,73 +1,103 @@
 <!DOCTYPE html>
-<html lang="en" >
-   <head>
-      <meta charset="UTF-8">
-      <title>Helion FRC</title>
-      <link rel="stylesheet" href="./css/stars.css">
-      <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-   </head>
-   <body>
-            <div class="focus">
-               <img src="./img/highquality.png">
-                <!--<h2>Dulwich College Beijing's All-Star First Robotics Challenge Team</h2>-->
-            </div>
-      <div class="container">
-         <div class="sky">
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Helion FRC</title>
+    <link rel="stylesheet" href="./css/stars.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+</head>
+
+<body>
+    <!-- Logo -->
+    <div class="focus">
+        <img src="./img/highquality.png">
+        <!--<h2>Dulwich College Beijing's All-Star First Robotics Challenge Team</h2>-->
+    </div>
+    <!-- Sky Background-->
+    <div class="container">
+        <div class="sky">
             <div class="stars"></div>
             <div class="stars1"></div>
             <div class="stars2"></div>
             <div class="shooting-stars"></div>
-          </div>
+        </div>
         <div class="arrow">
             <img src="./img/arrow.png">
         </div>
-      </div>
-       <div id="navbar">
-           <a href="#block2">Mission</a>
-           <a href="#block3">FAQ</a>
-           <a href="#block4">Contact us</a>
-       </div>
-      <div id="block1">
-            <div id="responsiveBlock">
-                <h1 style="color: var(--white);">We are <span id="superEmph">Helion.</span></h1>
-                <p style="color: var(--whiteish);">Helion is a FIRST Robotics team founded in 2018, and is entirely composed of high school and middle school students. We are located at Dulwich College Beijing, and our purpose is to successfully construct and program a competition robot that will compete in a FIRST Robotics regional. Our belief is that not only will we develop as individuals in the different fields of robotics, but we will also grow as a team. We are certain that Helion will provide an incredible experience for young students, and will teach them the perseverance and dedication needed to progress and suceed on the path of their choosing, taking the spirit of Helion Robotics with them as they go forward into their lives.</p>
+    </div>
+    <!-- Navigation Bar -->
+    <div id="navbar">
+        <a href="#block-mission-statement">Mission</a>
+        <a href="#block-faq">FAQ</a>
+        <a href="#block-contacts">Contact us</a>
+    </div>
+    <!-- Introduction to Team -->
+    <div id="block-introduction">
+        <div id="responsiveBlock">
+            <h1 style="color: var(--white);">We are <span id="superEmph">Helion.</span></h1>
+            <p style="color: var(--whiteish);">Helion is a FIRST Robotics team founded in 2018, and is entirely
+                composed of high school and middle school students. We are located at Dulwich College Beijing, and our
+                purpose is to successfully construct and program a competition robot that will compete in a FIRST
+                Robotics regional. Our belief is that not only will we develop as individuals in the different fields
+                of robotics, but we will also grow as a team. We are certain that Helion will provide an incredible
+                experience for young students, and will teach them the perseverance and dedication needed to progress
+                and suceed on the path of their choosing, taking the spirit of Helion Robotics with them as they go
+                forward into their lives.</p>
+        </div>
+    </div>
+    <!-- Mission Statement-->
+    <div id="block-mission-statement">
+        <div id="responsiveBlock">
+            <h2>Our Mission Statement</h2>
+            <p><span style="font-weight:500">We aim to</span> encourage the STEM subject to young students whilst
+                inspiring and developing them by engaging them and teaching them essential engineering skills,
+                entrepreneurial thinking, and problem-solving in programming, all while inspiring a new level of
+                creative innovation. </p>
+        </div>
+    </div>
+    <!-- Frequently Asked Questions -->
+    <div id="block-faq">
+        <div id="responsiveBlock">
+            <h2>FAQ</h2>
+            <div id="qa">
+                <h3 id="question">What is the FRC?</h3>
+                <p id="answer">The FIRST Robotics Competition (FRC) is an international high school robotics
+                    competition in which students compete using robots they made and try to score the most amount of
+                    points in a given situation. In the last few years it has gained widespread recognition from
+                    schools and universities around the world, with 81 million USD in scholarships being offered by a
+                    wide selection of universities and firms. Last year, FRC counted as many as 3,647 attending teams
+                    with more than 91,000 students and 25,000 mentors competing against each other from 27 different
+                    countries. Find out more about this competition <a id="link" href="https://www.firstinspires.org/robotics/frc">
+                        here</a></p>
             </div>
-      </div>
-      <div id="block2">
-            <div id="responsiveBlock">
-                <h2>Our Mission Statement</h2>
-                <p><span style="font-weight:500">We aim to</span> encourage the STEM subject to young students whilst inspiring and developing them by engaging them and teaching them essential engineering skills, entrepreneurial thinking, and problem-solving in programming, all while inspiring a new level of creative innovation.  </p>
+            <div id="qa">
+                <h3 id="question">What is DCB?</h3>
+                <p id="answer">the Dulwich College Beijing is an international school located in Beijing, China, with
+                    students of nationalities from around the world in its English curriculum. It is also the home and
+                    founding place of the Helion Robotics Team. Find out more about the school <a id="link" href="https://beijing.dulwich.org/">
+                        here</a></p>
             </div>
-      </div>
-      <div id="block3">
-            <div id="responsiveBlock">
-                <h2>FAQ</h2>
-                <div id="qa">
-                    <h3 id="question">What is the FRC?</h3>
-                    <p id="answer">The FIRST Robotics Competition (FRC) is an international high school robotics competition in which students compete using robots they made and try to score the most amount of points in a given situation. In the last few years it has gained widespread recognition from schools and universities around the world, with 81 million USD in scholarships being offered by a wide selection of universities and firms. Last year, FRC counted as many as 3,647 attending teams with more than 91,000 students and 25,000 mentors competing against each other from 27 different countries. Find out more about this competition <a id
-                    ="link" href="https://www.firstinspires.org/robotics/frc"> here</a></p>
-                </div>
-                <div id="qa">
-                    <h3 id="question">What is DCB?</h3>
-                    <p id="answer">the Dulwich College Beijing is an international school located in Beijing, China, with students of nationalities from around the world in its English curriculum. It is also the home and founding place of the Helion Robotics Team. Find out more about the school <a id
-                    ="link" href="https://beijing.dulwich.org/"> here</a></p>
-                </div>
-                <div id="qa">
-                    <h3 id="question">What are community days?</h3>
-                    <p id="answer">Community days are events in Dulwich College in which the spirit of STEM is inspired in younger students through robot showcases and similiar STEM demostrations. We hope to have these events as frequently as possible to encourage young students to follow the path of STEM in high school.</p>
-                </div>
+            <div id="qa">
+                <h3 id="question">What are community days?</h3>
+                <p id="answer">Community days are events in Dulwich College in which the spirit of STEM is inspired in
+                    younger students through robot showcases and similiar STEM demostrations. We hope to have these
+                    events as frequently as possible to encourage young students to follow the path of STEM in high
+                    school.</p>
             </div>
-      </div>
-      <div id="block4">
-            <!-- Our contact section -->
-            <div id="responsiveBlock">
-                <h2 style="text-align: left;">Contact us</h2>
-                <p>Find us on social media!</b</p>
-                <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
+        </div>
+    </div>
+    <!-- Our contact section -->
+    <div id="block-contacts">
+        <div id="responsiveBlock">
+            <h2 style="text-align: left;">Contact us</h2>
+            <p>Find us on social media!</b</p> <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
                 <h2><a href="http://www.instagram.com/helion_robotics"><i class="fab fa-instagram"></i></a></h2>
                 <h2><a href="./newsletter/Helion Newsletter 16.11.2018.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
-            </div>
-      </div>
-   </body>
+        </div>
+    </div>
+</body>
+
 </html>
