--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div id="block-faq">
         <div class="responsiveBlock">
             <h2>FAQ</h2>
-            <div id="qa">
-                <h3 id="question">What is the FRC?</h3>
-                <p id="answer">The FIRST Robotics Competition (FRC) is an international high school robotics
+            <div class="qa">
+                <h3 class="question">What is the FRC?</h3>
+                <p class="answer">The FIRST Robotics Competition (FRC) is an international high school robotics
                     competition in which students compete using robots they made and try to score the most amount of
                     points in a given situation. In the last few years it has gained widespread recognition from
                     schools and universities around the world, with 81 million USD in scholarships being offered by a
@@ -74,16 +74,16 @@
                     countries. Find out more about this competition <a id="link" href="https://www.firstinspires.org/robotics/frc">
                         here</a></p>
             </div>
-            <div id="qa">
-                <h3 id="question">What is DCB?</h3>
-                <p id="answer">the Dulwich College Beijing is an international school located in Beijing, China, with
+            <div class="qa">
+                <h3 class="question">What is DCB?</h3>
+                <p class="answer">the Dulwich College Beijing is an international school located in Beijing, China, with
                     students of nationalities from around the world in its English curriculum. It is also the home and
                     founding place of the Helion Robotics Team. Find out more about the school <a id="link" href="https://beijing.dulwich.org/">
                         here</a></p>
             </div>
-            <div id="qa">
-                <h3 id="question">What are community days?</h3>
-                <p id="answer">Community days are events in Dulwich College in which the spirit of STEM is inspired in
+            <div class="qa">
+                <h3 class="question">What are community days?</h3>
+                <p class="answer">Community days are events in Dulwich College in which the spirit of STEM is inspired in
                     younger students through robot showcases and similiar STEM demostrations. We hope to have these
                     events as frequently as possible to encourage young students to follow the path of STEM in high
                     school.</p>
