--- a/timeline.html
+++ b/timeline.html
@@ -6,18 +6,7 @@
 <body>
 
   <div class="timeline">
-
-    <div class="slider">
-      <img src="stars.jpg" id="star"></img>
-      <button class="circle" id="first"></button>
-      <button class="circle" id="second"></button>
-      <button class="circle" id="third"></button>
-      <button class="circle" id="fourth"></button>
-      <button class="circle" id="fifth"></button>
-      <button class="circle" id="sixth"></button>
-      <div id="bar"></div>
-    </div>
-
+    
     <div class="container" id="red2">
       <div class="content">
         <h4>1st February, 2018</h4>
@@ -54,7 +43,7 @@
       <div class="content">
         <h4>5th February, 2018</h4>
         <h1>The competition begins...</h1>
-        <p>After weeks and weeks of hard work and labour, the Helion Robot is ready. Now, chosen members of the team are taking it to Silicon Valley, where they will compete for a chance to win first prize. Good Luck!</p>
+        <p>After weeks and weeks of hard work and labour, the Helion Robot is ready. Now, chosen members of the team are taking it to Silicon ValleyGood Luck!</p>
       </div>
     </div>
 
