Commented Unrequired References
Commented bootstrap and jquery references

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 
     <!-- SCRIPTS -->
     <!-- jQuery -->
-    <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
+    <!-- <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script> -->
     <!-- Bootstrap -->
-    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    <!-- <script type="text/javascript" src="./js/bootstrap.min.js"></script> -->
     <!-- Scroll -->
     <script type="text/javascript" src="./js/ScrollMagic.min.js"></script>
-    <!-- Indext Page -->
+    <!-- Index Page -->
     <script>
         var controller = new ScrollMagic.Controller();
         new ScrollMagic.Scene({ triggerElement: '#contact-text', duration: '120%', triggerHook: 0.8 })
