Enabled scroll down by click
When you click the arrow, you scroll down to "#navbar", which is quite aesthetically pleasing. Also made the big logo be clickable to #.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 <body>
     <!-- Logo -->
     <div class="focus">
-        <img src="./img/highquality.png">
+        <a href="#"><img src="./img/highquality.png"></a>
         <!--<h2>Dulwich College Beijing's All-Star First Robotics Challenge Team</h2>-->
     </div>
+    <a href="#navbar">
+        <div class="arrow">
+            <img src="./img/arrow.png">
+        </div>
+    </a>
     <!-- Sky Background-->
     <div class="container">
         <div class="sky">
@@ -24,9 +29,6 @@
             <div class="stars1"></div>
             <div class="stars2"></div>
             <div class="shooting-stars"></div>
-        </div>
-        <div class="arrow">
-            <img src="./img/arrow.png">
         </div>
     </div>
     <!-- Navigation Bar -->
