--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+122 lines (118 sloc) 6.18 KB
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stars.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -49,6 +51,17 @@
                 experience for young students, and will teach them the perseverance and dedication needed to progress
                 and suceed on the path of their choosing, taking the spirit of Helion Robotics with them as they go
                 forward into their lives.</p>
+        </div>
+    </div>
+    <!-- Robot Reveal-->
+    <div id="block-robot-reveal">
+        <div class="flex-robot-container">
+            <img class="weird-flex" src="./prime.png">
+            <div class="but-ok">
+                <h2>Robot Reveal: Optimus Prime!</h2>
+                <p>Optimus Prime, known in Japan as Convoy, is a robot superhero character from the Transformers robot superhero franchise. He is the leader of the Autobots, a group of sentient self-configuring modular extraterrestrial robotic lifeforms. He is frequently featured in popular culture.</p>
+                <p></p>
+            </div>
         </div>
     </div>
     <!-- Mission Statement-->
@@ -118,5 +131,3 @@
             .addTo(controller);
     </script>
 </body>
-
-</html>
