--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             <img class="weird-flex" src="./prime.png">
             <div class="but-ok">
                 <h2>Robot Reveal: Phoenix</h2>
-                <p<p>This robot, a labour of love from our programming and engineering teams, is a work of art. She can stretch, sit, spin, shift, smooth like silky pancake batter. In her free time, she loves playing ball and training with our drive team. She can:</p><ul><li><p>Move up to the second level of the HAB</p></li><li><p>Place both balls and hatches onto the rockets</p></li><li><p>Place both balls and hatches onto the landing gear</p></li><li><p>Operate driver-controlled during the sandstorm period</p></li><li><p>Semi-automation using complex, rPi-based vision systems</p></li></ul></p>
-                <p></p>
+                <p>This robot, a labour of love from our programming and engineering teams, is a work of art. She can stretch, sit, spin, shift, smooth like silky pancake batter. In her free time, she loves playing ball and training with our drive team. She can move up to the second level of the HAB, place both balls and hatches onto the rockets, operate driver-controlled during the sandstorm period, and partially run by herself using complex, rPi-based vision systems</p>
             </div>
         </div>
     </div>
