--- a/index.html
+++ b/index.html
@@ -112,4 +112,22 @@
             <h2><a href="./newsletter/Helion Newsletter 16.11.2018.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
         </div>
     </div>
+
+
+<div id="block-sponsors">
+            <h1 style="color: var(--white); text-align:center; font-size: 5em;">Our <span id="superEmph">sponsors</span></h1>
+        <div class="flex-robot-container">
+            <img class="mega-sponsor" src="./man.png">
+            <img class="mega-sponsor" src="./novavision.png">
+            <img class="mega-sponsor" src="./guazi.png">
+        </div>
+        <div class="flex-robot-container">
+            <img class="sponsor" src="./pioneer.png">
+            <img class="sponsor" src="./dulwich.png">
+            <img class="sponsor" src="./dtf.png">
+            <img class="sponsor" src="./fod.png">
+            <img class="sponsor" src="./se21.png">
+            <img class="sponsor" src="./intronics.png">
+        </div>
+</div>
 </body>
