sponsors page added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="#block-mission-statement">Mission</a>
         <a href="#block-faq">FAQ</a>
         <a href="#block-contacts">Contact us</a>
+        <a href="#block-sponsors">Sponsors</a>
     </div>
     <!-- Introduction to Team -->
     <div id="block-introduction">
@@ -115,7 +116,6 @@
 
 
 <div id="block-sponsors">
-            <h1 style="color: var(--white); text-align:center; font-size: 5em;">Our <span id="superEmph">sponsors</span></h1>
         <div class="flex-robot-container">
             <img class="mega-sponsor" src="./man.png">
             <img class="mega-sponsor" src="./novavision.png">
