--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
 
 <div id="block-sponsors">
         <div class="flex-robot-container">
-            <img class="mega-sponsor" src="./man.png">
-            <img class="mega-sponsor" src="./novavision.png">
-            <img class="mega-sponsor" src="./guazi.png">
+            <a href="https://china.man-es.com/"><img class="mega-sponsor" src="./man.png"></a>
+            <a href=""><img class="mega-sponsor" src="./novavision.png"></a>
+            <a href=""><img class="mega-sponsor" src="./intronics.png"></a>
         </div>
         <div class="flex-robot-container">
-            <img class="sponsor" src="./pioneer.png">
-            <img class="sponsor" src="./dulwich.png">
-            <img class="sponsor" src="./dtf.png">
-            <img class="sponsor" src="./fod.png">
-            <img class="sponsor" src="./se21.png">
-            <img class="sponsor" src="./intronics.png">
+            <a href="https://www.dulwich.org/news-and-events/300000-rmb-awarded-for-development-of-student-led-projects"><img class="sponsor" src="./pioneer.png"></a>
+            <a href="https://beijing.dulwich.org/"><img class="sponsor" src="./dulwich.png"></a>
+            <a href="https://www.dintaifung.com.tw/eng/index.php"><img class="sponsor" src="./dtf.png"></a>
+            <a href="https://beijing.dulwich.org/our-people/friends-of-dulwich"><img class="sponsor" src="./fod.png"></a>
+            <a href="https://beijing.dulwich.org/learning-at-dulwich/steam-se21"><img class="sponsor" src="./se21.png"></a>
+            <a href="https://www.guazi.com/bj/"><img class="sponsor" src="./guazi.png"></a>
         </div>
 </div>
 </body>
