--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stars.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/highquality.png"/>
 </head>
 
 <body>
