--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="./css/stars.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/highquality.png"/>
+    <link rel="shortcut icon" href="https://helionrobotics.com/img/highquality.png"/>
 </head>
 
 <body>
