Fixed your line and basically cleaned things up

--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
             </div>
         </div>
     </div>
+    
     <!-- Our contact section -->
     <div id="block-contacts" >
         <div class="responsiveBlock fadein-text" id="contact-text">
             <h2 style="text-align: left;">Contact us</h2>
-            <p>Find us on social media!</b></p>
+            <p>Find us on social media!</p>
             <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
             <h2><a href="http://www.instagram.com/helion_robotics", target="blank"><i class="fab fa-instagram"></i></a></h2>
             <h2><a href="./newsletter/Helion Newsletter 18.03.2019.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
         </div>
     </div>
 
-
-<div id="block-sponsors">
+    <div id="block-sponsors">
         <div class="flex-robot-container">
             <a href="https://china.man-es.com/"><img class="mega-sponsor" src="./man.png"></a>
             <a href=""><img class="mega-sponsor" src="./novavision.png"></a>
@@ -130,5 +130,5 @@
             <a href="https://beijing.dulwich.org/learning-at-dulwich/steam-se21"><img class="sponsor" src="./se21.png"></a>
             <a href="https://www.guazi.com/bj/"><img class="sponsor" src="./guazi.png"></a>
         </div>
-</div>
+    </div>
 </body>
