--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="responsiveBlock fadein-text" id="contact-text">
             <h2 style="text-align: left;">Contact us</h2>
             <p>Find us on social media!</p>
-            <h2><a href="mailto:jingjing.chen@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
+            <h2><a href="mailto:helion7738@dulwich-beijing.cn;"><i class="fas fa-envelope"></i></a></h2>
             <h2><a href="http://www.instagram.com/helion_robotics", target="blank"><i class="fab fa-instagram"></i></a></h2>
             <h2><a href="./newsletter/Helion Newsletter 18.03.2019.pdf" target="_blank"><i class="far fa-file-pdf"></i></a></h2>
         </div>
