--- a/induction.html
+++ b/induction.html
@@ -22,16 +22,16 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="#office365">Office365</a>
+                        <strong><a class="nav-link" href="#office365">Office365</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#onenote">OneNote</a>
+                        <strong><a class="nav-link" href="#onenote">OneNote</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#teams">Teams</a>
+                        <strong><a class="nav-link" href="#teams">Teams</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#onedrive">OneDrive</a>
+                        <strong><a class="nav-link" href="#onedrive">OneDrive</a></strong>
                     </li>
                 </ul>
             </div>
@@ -46,16 +46,16 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
                 <ul class="navbar-nav mr-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="#myschool">MySchool</a>
+                        <strong><a class="nav-link" href="#myschool">MySchool</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#sharepoint">Sharepoint</a>
+                        <strong><a class="nav-link" href="#sharepoint">Sharepoint</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#websites">Websites</a>
+                        <strong><a class="nav-link" href="#websites">Websites</a></strong>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#troubleshoot">Troubleshoot</a>
+                        <strong><a class="nav-link" href="#troubleshoot">Troubleshoot</a></strong>
                     </li>
                 </ul>
             </div>
@@ -72,9 +72,6 @@
             </div>
             <div class="col-md-8 col-sm-10">
                 <div id="intro">
-                    <div class="logo">
-                        <img src="dulwich.png">
-                    </div>
                     <h1>Dulwich Tech Handbook</h1>
                     <hr>
                     <p>
