--- a/induction.html
+++ b/induction.html
@@ -63,7 +63,7 @@
         </div>
     
     <main>
-    <div style="height:15vh; background-color: white;"></div>    
+    <div id="navrep"></div>    
     
         <div class="blank" id="office365"></div>
         <div class="container">
