--- a/induction.html
+++ b/induction.html
@@ -79,11 +79,11 @@
                     Below, you can find helpful tutorials on how to work 
                     with the applications you will be using for online learning. <br><br>
 
-                    If you have any questions, feel free to send an email to the ICT department
-                    <a href="mailto:icthelpdesk@dulwich-beijing.cn">icthelpdesk@dulwich-beijing.cn</a> or contact <a href="mailto:mark.li@dulwich-beijing.cn">mark.li@dulwich-beijing.cn</a> and <a href="mailto:jinho.hong@dulwich-beijing.cn">jinho.hong@dulwich-beijing.cn</a>
+                    If you have any questions, feel free to send an email to the ICT department 
+                    <a href="mailto:icthelpdesk@dulwich-beijing.cn">here</a>.<br>
                     We hope to welcome you in person soon!
                     <br><br>
-                    Mark, Jinho
+                    - MIT Core Team
                     </p>
                     <hr>
                 </div>
